@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	- Modified behaviour for being strict (dont allow chars behind keyword)
 
 0.004     2011-02-03 05:35:24 Europe/Berlin
 	- Fixed regexp for matching (again..)
